--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Happy Level Up Selvii</title>
+  <title>Buat Kamuu</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <style>
     body {
@@ -53,7 +53,7 @@
 <body class="text-center p-8 relative">
   <div class="hearts" id="hearts"></div>
   <section class="z-10 relative">
-    <h1 class="text-4xl md:text-6xl font-bold text-pink-600 mb-4">Happy Birthday, My Love ❤️</h1>
+    <h1 class="text-4xl md:text-6xl font-bold text-pink-600 mb-4">Happy Level Up Selvii❤️</h1>
     <p class="text-lg md:text-xl max-w-2xl mx-auto">Today is all about you. You are my sunshine, my laughter, my everything. I’m so grateful for every moment with you. I love you endlessly.</p>
   </section>
 
