--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <div class="hearts" id="hearts"></div>
   <section class="z-10 relative">
     <h1 class="text-4xl md:text-6xl font-bold text-pink-600 mb-4">Happy Level Up Selvii❤️</h1>
-    <p class="text-lg md:text-xl max-w-2xl mx-auto">Today is all about you. You are my sunshine, my laughter, my everything. I’m so grateful for every moment with you. I love you endlessly.</p>
+    <p class="text-lg md:text-xl max-w-2xl mx-auto">Cieee ciee ada yang nambah umurr nih, semoga sehat selaluu, panjang umurr, semogaa apa yang kamu mimpiin bisa tercapaii. Semoga makin sayang sama aku wkwk.</p>
   </section>
 
   <section class="mt-12">
